fix btn for collapsing list of lessons

--- a/lms/static/sass/features/_course-experience.scss
+++ b/lms/static/sass/features/_course-experience.scss
@@ -428,8 +428,6 @@ button.accordion-trigger, button.prerequisite-button {
 
 #expand-collapse-outline-all-button {
   float: right;
-  background-color: $white;
-  color: $black;
   cursor: pointer;
 }
 
